alpha 1.1.20250924.3 支持命令名直接输入常规字符以支持直接输入演员名字而不需要在次要参数另外定义

--- a/src/main/resources/messages/SPFileParserBundle_zh_CN.properties
+++ b/src/main/resources/messages/SPFileParserBundle_zh_CN.properties
@@ -1,2 +1,39 @@
 filetype.displayname=\u6b4c\u5ead\u5267\u672c\u811a\u672c
 filetype.description=\u6b4c\u5ead\u5267\u672c\u811a\u672c
+
+completionContributor.commandName.bgm=\u80cc\u666f\u97f3\u4e50\u8bbe\u7f6e
+completionContributor.commandName.playsound=\u64ad\u653e\u58f0\u97f3
+completionContributor.commandName.Playvideo=\u64ad\u653e\u89c6\u9891
+completionContributor.commandName.changebg=\u66f4\u6539\u821e\u53f0\u80cc\u666f
+completionContributor.commandName.changefigure=\u66f4\u6539\u6f14\u5458\u8863\u88c5
+completionContributor.commandName.callscene=\u5207\u6362\u5267\u672c
+completionContributor.commandName.choose=\u9009\u62e9\u76ee\u6807\u6bb5\u843d
+completionContributor.commandName.label=\u5b9a\u4e49\u6807\u7b7e
+completionContributor.commandName.jumplabel=\u8df3\u8f6c\u6307\u5b9a\u6807\u7b7e
+completionContributor.commandName.setvar=\u5b9a\u4e49\u53d8\u91cf
+completionContributor.commandName.setanimation=\u6267\u884c\u52a8\u4f5c
+completionContributor.commandName.settransform=\u8bbe\u7f6e\u53d8\u6362
+completionContributor.commandName.genobject=\u751f\u6210\u6e38\u620f\u5bf9\u8c61
+completionContributor.commandName.settextbox=\u8bbe\u7f6e\u53f0\u8bcd\u6587\u672c\u6846\u6837\u5f0f
+completionContributor.commandName.getuserinput=\u83b7\u53d6\u7528\u6237\u8f93\u5165
+
+# ?????
+completionContributor.subParam.concat=\u8868\u660e\u672c\u884c\u53f0\u8bcd\u662f\u63a5\u5728\u4e0a\u4e00\u884c\u8bed\u53e5\u4e4b\u540e\u3002
+completionContributor.subParam.next=\u672c\u884c\u6267\u884c\u5b8c\u540e\u7acb\u523b\u6267\u884c\u4e0b\u4e00\u53e5\u3002
+completionContributor.subParam.left=\u6807\u5728 changeFigure \u4e4b\u540e\uff0c\u63a7\u5236\u4eba\u7269\u6a21\u578b\u4f4d\u7f6e\u3002
+completionContributor.subParam.right=\u6807\u5728 changeFigure \u4e4b\u540e\uff0c\u63a7\u5236\u4eba\u7269\u6a21\u578b\u4f4d\u7f6e\u3002
+completionContributor.subParam.global=\u8bbe\u7f6e\u8be5\u53d8\u91cf\u4e3a\u5168\u53d8\u91cf\u3002
+completionContributor.subParam.id=\u8bbe\u7f6e\u76f8\u5173\u6307\u4ee4\u751f\u6210\u7684\u6e38\u620f\u5bf9\u8c61\u7684\u540d\u79f0\u3002
+completionContributor.subParam.target=\u4e3a\u672c\u884c\u6307\u4ee4\u6307\u5b9a\u4e00\u4e2a\u9700\u8981\u4f5c\u7528\u7684\u6e38\u620f\u5bf9\u8c61\u3002
+completionContributor.subParam.volume=\u8c03\u6574\u5373\u5c06\u64ad\u653e\u7684\u97f3\u9891\u97f3\u91cf\u3002
+completionContributor.subParam.vol=\u8c03\u6574\u5373\u5c06\u64ad\u653e\u7684\u97f3\u9891\u97f3\u91cf\u3002
+completionContributor.subParam.voice=\u7528\u4e8e\u5bf9\u8bdd\uff0c\u8bbe\u7f6e\u8fd9\u53e5\u53f0\u8bcd\u9700\u8981\u7684\u97f3\u9891\u3002
+completionContributor.subParam.v=\u7528\u4e8e\u5bf9\u8bdd\uff0c\u8bbe\u7f6e\u8fd9\u53e5\u53f0\u8bcd\u9700\u8981\u7684\u97f3\u9891\u3002
+completionContributor.subParam.skipOff=\u963b\u6b62\u73a9\u5bb6\u4e3b\u52a8\u8df3\u8fc7\u97f3\u89c6\u9891\u3002
+completionContributor.subParam.enter=\u8bbe\u7f6e\u5373\u5c06\u64ad\u653e\u97f3\u9891\u97f3\u91cf\u7684\u6e10\u53d8\uff0c\u6216\u56fe\u50cf\u7684\u6e10\u5165\u7c7b\u578b\u3002
+completionContributor.subParam.exit=\u8bbe\u7f6e\u56fe\u50cf\u7684\u6e10\u51fa\u578b\u3002
+completionContributor.subParam.layer=\u8bbe\u7f6e\u56fe\u50cf\u7684\u6574\u4f53\u56fe\u5c42\u4fe1\u606f\u3002
+completionContributor.subParam.when=\u901a\u8fc7\u6761\u4ef6\u5224\u65ad\u8bed\u53e5\uff0c\u5224\u65ad\u8fd9\u884c\u8bed\u53e5\u662f\u5426\u5e94\u8be5\u6267\u884c\u3002
+completionContributor.subParam.title=\u8bbe\u7f6e\u8f93\u5165\u6846\u6807\u9898\u3002
+completionContributor.subParam.buttonText=\u8bbe\u7f6e\u6309\u94ae\u7684\u663e\u793a\u6587\u672c\u3002
+completionContributor.subParam.defaultText=\u6587\u672c\u6846\u865a\u5316\u663e\u793a\u7684\u9ed8\u8ba4\u6587\u672c\u3002
