--- a/src/main/resources/messages/SPFileParserBundle_zh_CN.properties
+++ b/src/main/resources/messages/SPFileParserBundle_zh_CN.properties
@@ -17,22 +17,32 @@ completionContributor.commandName.genobject=\u751f\u6210\u6e38\u620f\u5bf9\u8c61
 completionContributor.commandName.settextbox=\u8bbe\u7f6e\u53f0\u8bcd\u6587\u672c\u6846\u6837\u5f0f
 completionContributor.commandName.getuserinput=\u83b7\u53d6\u7528\u6237\u8f93\u5165
 
-completionContributor.subParam.concat=\u8868\u660e\u672c\u884c\u53f0\u8bcd\u662f\u63a5\u5728\u4e0a\u4e00\u884c\u8bed\u53e5\u4e4b\u540e\u3002
-completionContributor.subParam.next=\u672c\u884c\u6267\u884c\u5b8c\u540e\u7acb\u523b\u6267\u884c\u4e0b\u4e00\u53e5\u3002
-completionContributor.subParam.left=\u6807\u5728 changeFigure \u4e4b\u540e\uff0c\u63a7\u5236\u4eba\u7269\u6a21\u578b\u4f4d\u7f6e\u3002
-completionContributor.subParam.right=\u6807\u5728 changeFigure \u4e4b\u540e\uff0c\u63a7\u5236\u4eba\u7269\u6a21\u578b\u4f4d\u7f6e\u3002
-completionContributor.subParam.global=\u8bbe\u7f6e\u8be5\u53d8\u91cf\u4e3a\u5168\u53d8\u91cf\u3002
-completionContributor.subParam.id=\u8bbe\u7f6e\u76f8\u5173\u6307\u4ee4\u751f\u6210\u7684\u6e38\u620f\u5bf9\u8c61\u7684\u540d\u79f0\u3002
-completionContributor.subParam.target=\u4e3a\u672c\u884c\u6307\u4ee4\u6307\u5b9a\u4e00\u4e2a\u9700\u8981\u4f5c\u7528\u7684\u6e38\u620f\u5bf9\u8c61\u3002
-completionContributor.subParam.volume=\u8c03\u6574\u5373\u5c06\u64ad\u653e\u7684\u97f3\u9891\u97f3\u91cf\u3002
-completionContributor.subParam.vol=\u8c03\u6574\u5373\u5c06\u64ad\u653e\u7684\u97f3\u9891\u97f3\u91cf\u3002
-completionContributor.subParam.voice=\u7528\u4e8e\u5bf9\u8bdd\uff0c\u8bbe\u7f6e\u8fd9\u53e5\u53f0\u8bcd\u9700\u8981\u7684\u97f3\u9891\u3002
-completionContributor.subParam.v=\u7528\u4e8e\u5bf9\u8bdd\uff0c\u8bbe\u7f6e\u8fd9\u53e5\u53f0\u8bcd\u9700\u8981\u7684\u97f3\u9891\u3002
-completionContributor.subParam.skipOff=\u963b\u6b62\u73a9\u5bb6\u4e3b\u52a8\u8df3\u8fc7\u97f3\u89c6\u9891\u3002
-completionContributor.subParam.enter=\u8bbe\u7f6e\u5373\u5c06\u64ad\u653e\u97f3\u9891\u97f3\u91cf\u7684\u6e10\u53d8\uff0c\u6216\u56fe\u50cf\u7684\u6e10\u5165\u7c7b\u578b\u3002
-completionContributor.subParam.exit=\u8bbe\u7f6e\u56fe\u50cf\u7684\u6e10\u51fa\u578b\u3002
-completionContributor.subParam.layer=\u8bbe\u7f6e\u56fe\u50cf\u7684\u6574\u4f53\u56fe\u5c42\u4fe1\u606f\u3002
-completionContributor.subParam.when=\u901a\u8fc7\u6761\u4ef6\u5224\u65ad\u8bed\u53e5\uff0c\u5224\u65ad\u8fd9\u884c\u8bed\u53e5\u662f\u5426\u5e94\u8be5\u6267\u884c\u3002
-completionContributor.subParam.title=\u8bbe\u7f6e\u8f93\u5165\u6846\u6807\u9898\u3002
-completionContributor.subParam.buttonText=\u8bbe\u7f6e\u6309\u94ae\u7684\u663e\u793a\u6587\u672c\u3002
-completionContributor.subParam.defaultText=\u6587\u672c\u6846\u865a\u5316\u663e\u793a\u7684\u9ed8\u8ba4\u6587\u672c\u3002
+completionContributor.subParam.concat=\u672a\u5b8c\u5f85\u7eed
+completionContributor.subParam.next=\u7acb\u523b\u6267\u884c\u4e0b\u4e00\u6b65
+completionContributor.subParam.left=\u5f15\u5411\u5de6\u8fb9
+completionContributor.subParam.right=\u5f15\u5411\u53f3\u8fb9
+completionContributor.subParam.center=\u5f15\u5411\u4e2d\u95f4
+
+completionContributor.subParam.id=\u6307\u5411\u5bf9\u5e94id\uff0c\u5426\u5219\u65b0\u5efa\u5bf9\u8c61\u5e76\u6307\u5411
+completionContributor.subParam.target=\u6307\u5411\u5bf9\u5e94id\uff0c\u4f46\u4e0d\u4f1a\u521b\u5efa\u65b0\u5bf9\u8c61
+completionContributor.subParam.option=\u9009\u62e9\u9009\u9879
+
+completionContributor.subParam.volume=\u8c03\u8282\u97f3\u89c6\u9891\u97f3\u91cf
+completionContributor.subParam.voice=\u6307\u5b9a\u8981\u64ad\u653e\u7684\u97f3\u9891\uff0c\u4e3b\u8981\u7528\u4e8e\u5bf9\u8bdd
+completionContributor.subParam.motion=\u8981\u6c42\u6f14\u5458\u8fdb\u884c\u52a8\u4f5c
+completionContributor.subParam.skipOff=\u963b\u6b62\u73a9\u5bb6\u8df3\u8fc7
+
+completionContributor.subParam.clear=\u6e05\u7a7a\u6587\u672c\u6846
+completionContributor.subParam.title=\u8f93\u5165\u6846\u6807\u9898
+completionContributor.subParam.buttonText=\u8f93\u5165\u6846\u6309\u94ae\u6587\u672c
+completionContributor.subParam.defaultText=\u8f93\u5165\u6846\u6253\u5e95\u6587\u672c
+
+completionContributor.subParam.enter=\u8bbe\u7f6e\u97f3\u89c6\u9891\u4e0e\u56fe\u50cf\u7684\u6e10\u5165
+completionContributor.subParam.exit=\u8bbe\u7f6e\u97f3\u89c6\u9891\u4e0e\u56fe\u50cf\u7684\u6e10\u51fa
+completionContributor.subParam.layer=\u8bbe\u7f6e\u56fe\u50cf\u56fe\u5c42
+
+completionContributor.subParam.async=\u4e0e\u540e\u7eed\u8bed\u53e5\u4e00\u9f50\u5f02\u6b65\u6267\u884c
+completionContributor.subParam.duration=\u8bbe\u7f6e\u547d\u4ee4\u6267\u884c\u5b8c\u6bd5\u6240\u9700\u7684\u65f6\u95f4%28ms%29
+completionContributor.subParam.global=\u5c06\u53d8\u91cf\u7f6e\u4e8e\u5168\u5c40
+completionContributor.subParam.when=\u8bbe\u7f6e\u5224\u65ad\u6761\u4ef6
+completionContributor.subParam.state=\u6307\u5b9a\u547d\u4ee4\u6267\u884c\u72b6\u6001
