--- a/src/main/resources/messages/SPFileParserBundle_zh_CN.properties
+++ b/src/main/resources/messages/SPFileParserBundle_zh_CN.properties
@@ -1,3 +1,6 @@
+projectService=Project service: {0}
+randomLabel=The random number is: {0}
+shuffle=Shuffle
 filetype.displayname=\u6b4c\u5ead\u5267\u672c\u811a\u672c
 filetype.description=\u6b4c\u5ead\u5267\u672c\u811a\u672c
 
